[package]
name = "res2br"
version = "1.2.1"
edition = "2021"
authors = ["Ben Raz <ben.raz2008@gmail.com>"]
license = "AGPL-3.0-or-later"
description = "A tool to convert between resolutions and bitrates"
readme = "README.md"
homepage = "https://github.com/benraz123/res2br"
repository = "https://github.com/benraz123/res2br"
keywords = ["cli", "image", "video"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
